--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2021 Jean Luca Bez &bull; All rights reserved</p>
+                        <p class="copyright-text text-center">Copyright &copy; 2021 Jean Luca Bez &bull; &mdash; All rights reserved</p>
                         <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
                     </div>
                     
