include resume and cv, fix typo

--- a/index.html
+++ b/index.html
@@ -80,16 +80,19 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hey, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Jean Luca Bez</span>
-                                    <span class="animated-item">HPC I/O Specialist</span>
-                                    <span class="animated-item">Data Scientist</span>
-                                    <span class="animated-item">Web Developer</span>
+                                    <span class="animated-item">an I/O Researcher</span>
+                                    <span class="animated-item">a Data Scientist</span>
+                                    <span class="animated-item">a Web Developer</span>
                                 </div>
                         </h1>
 
-                        <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
+                        <p>
+                          I am passionate about High-Performance I/O, Parallel I/O, Education, and Competitive Programming. My research focuses on optimizing the I/O performance of scientific applications by exploring I/O forwarding, scheduling, and automatic tuning.
+                        </p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="files/jean-luca-bez-resume.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
+                          <a href="files/jean-luca-bez-cv.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
                         </div>
                     </div>
                 </div>
@@ -125,6 +128,18 @@ https://www.tooplate.com/view/2115-marvel
                         <div class="item">
                           <div class="project-info">
                             <img src="images/project/io500.png" class="img-fluid" alt="IO500 Website">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/gekkofs.png" class="img-fluid" alt="GekkoFS - Forwarding Mode">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/forge.png" class="img-fluid" alt="FORGE">
                           </div>
                         </div>
 
@@ -241,7 +256,7 @@ https://www.tooplate.com/view/2115-marvel
           
           <div class="col-lg-12 col-12">
             <div class="contact-form">
-              <h2 class="mb-4">Interested to work together? Let's talk!</h2>
+              <h2 class="mb-4">Interested in working together? Let's talk!</h2>
 
               <p>
                 You can reach me by email <strong>jean.bez</strong> at <strong>inf.ufrgs.br</strong>.
@@ -266,7 +281,7 @@ https://www.tooplate.com/view/2115-marvel
           <div class="container">
                <div class="row">
 
-                    <div class="col-lg-12 col-12">                                
+                    <div class="col-lg-12 col-12">
                         <p class="copyright-text text-center">Copyright &copy; 2021 Jean Luca Bez &bull; &mdash; All rights reserved</p>
                         <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
                     </div>
