--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ https://www.tooplate.com/view/2115-marvel
                              </div>
                              <div class="timeline-info">
                                   <h3><span>Doctorate</span><small>Computer Science</small></h3>
-                                  <p>Ph.D. Candidate at the Federal University of Rio Grande do Sul (UFRGS), Brazil, under the supervision of Prof. Dr. Philippe Navaux (UFRGS) and Prof. Dr. Toni Cortes (BSC/UCP).</p>
+                                  <p>Ph.D. with honors at the Federal University of Rio Grande do Sul (UFRGS), Brazil, under the supervision of Prof. Dr. Philippe Navaux (UFRGS) and Prof. Dr. Toni Cortes (BSC/UCP).</p>
                              </div>
                         </div>
 
@@ -212,6 +212,16 @@ https://www.tooplate.com/view/2115-marvel
                   <h2 class="mb-4">Experience</h2>
 
                     <div class="timeline">
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
+                                  <span>2021</span>
+                             </div>
+                             <div class="timeline-info">
+                                  <h3><span>Postdoctoral Scholar</span><small>LBNL, USA</small></h3>
+                                  <p>Postdoctoral Scholar in Scientific Data Management at Lawrence Berkeley National Laboratory from May 2021 to present day.</p>
+                             </div>
+                        </div>
+
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
                                   <span>2019</span>
@@ -292,7 +302,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">
-                        <p class="copyright-text text-center">Copyright &copy; 2021 Jean Luca Bez &bull; &mdash; All rights reserved</p>
+                        <p class="copyright-text text-center">&copy; 2021 Jean Luca Bez</p>
                         <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
                     </div>
                     
