--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ https://www.tooplate.com/view/2115-marvel
               <h2 class="mb-4">Interested in working together? Let's talk!</h2>
 
               <p>
-                You can reach me by email <strong>jean.bez</strong> at <strong>inf.ufrgs.br</strong>.
+                You can reach me by email <strong>jlbez</strong> at <strong>lbl.gov</strong>.
               </p>
 
               <ul class="social-links">
