--- a/index.html
+++ b/index.html
@@ -134,31 +134,43 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/urionlinejudge.png" class="img-fluid" alt="URI Online Judge">
+                            <img src="images/project/dxt-explorer-min.png" class="img-fluid" alt="DXT Explorer">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/io500.png" class="img-fluid" alt="IO500 Website">
+                            <img src="images/project/h5bench-min.png" class="img-fluid" alt="h5bench">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/gekkofs.png" class="img-fluid" alt="GekkoFS - Forwarding Mode">
+                            <img src="images/project/urionlinejudge-min.png" class="img-fluid" alt="URI Online Judge">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/forge.png" class="img-fluid" alt="FORGE">
+                            <img src="images/project/io500-min.png" class="img-fluid" alt="IO500 Website">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/adaptative.png" class="img-fluid" alt="Adaptative I/O Request Scheduling">
+                            <img src="images/project/gekkofs-min.png" class="img-fluid" alt="GekkoFS - Forwarding Mode">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/forge-min.png" class="img-fluid" alt="FORGE">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/adaptative-min.png" class="img-fluid" alt="Adaptative I/O Request Scheduling">
                           </div>
                         </div>
 
