--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ https://www.tooplate.com/view/2115-marvel
                              </div>
                              <div class="timeline-info">
                                   <h3><span>IO500</span><small>Web Design</small></h3>
-                                  <p>Ph.D. with honors at the Federal University of Rio Grande do Sul (UFRGS), Brazil, under the supervision of Prof. Dr. Philippe Navaux (UFRGS) and Prof. Dr. Toni Cortes (BSC/UCP).</p>
+                                  <p>Design and implementation of the new io500.org website.</p>
                              </div>
                         </div>
 
