--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ https://www.tooplate.com/view/2115-marvel
                         <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
                     </li>
                     <li class="nav-item">
+                        <a href="#awards" class="nav-link"><span data-hover="Awards">Awards</span></a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#service" class="nav-link"><span data-hover="Service">Service</span></a>
                     </li>
                     <li class="nav-item">
@@ -100,11 +103,10 @@ https://www.tooplate.com/view/2115-marvel
                         </h1>
 
                         <p>
-                          I am passionate about High-Performance I/O, Parallel I/O, Education, and Competitive Programming. My research focuses on optimizing the I/O performance of scientific applications by exploring I/O forwarding, scheduling, and automatic tuning.
+                          I am a Career-Track Research Scientist at Lawrence Berkeley National Laboratory (LBNL), USA. I am passionate about High-Performance I/O, Parallel I/O, Education, and Competitive Programming. My research focuses on optimizing the I/O performance of scientific applications and data management.
                         </p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="files/jean-luca-bez-resume.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
                           <a href="files/jean-luca-bez-cv.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
                         </div>
                     </div>
@@ -229,11 +231,21 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="timeline">
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
+                                  <span>2023</span>
+                             </div>
+                             <div class="timeline-info">
+                                  <h3><span>Research Scientist</span><small>LBNL, USA</small></h3>
+                                  <p>Career-Track Research Scientist in Scientific Data Management at Lawrence Berkeley National Laboratory from March 2023 to present day.</p>
+                             </div>
+                        </div>
+
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
                                   <span>2021</span>
                              </div>
                              <div class="timeline-info">
                                   <h3><span>Postdoctoral Scholar</span><small>LBNL, USA</small></h3>
-                                  <p>Postdoctoral Scholar in Scientific Data Management at Lawrence Berkeley National Laboratory from May 2021 to present day.</p>
+                                  <p>Postdoctoral Scholar in Scientific Data Management at Lawrence Berkeley National Laboratory from May 2021 to February 2023.</p>
                              </div>
                         </div>
 
@@ -285,14 +297,24 @@ https://www.tooplate.com/view/2115-marvel
     </section>
 
     <!-- AWARDS -->
-    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="awards">
+    <section class="resume py-5 d-lg-flex justify-content-center align-items-center">
         <div class="container">
             <div class="row">
 
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" id="awards">
                   <h2 class="mb-4 mobile-mt-2">Awards</h2>
 
                     <div class="timeline">
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
+                                  <span>2023</span>
+                             </div>
+                             <div class="timeline-info">
+                                  <h3><span>BSSw Fellow</span><small>(Honorable Mention)</small></h3>
+                                  <p>Awarded by the Better Scientific Software (BSSw) who gives recognition and funding to leaders and advocates of high-quality scientific software.</p>
+                             </div>
+                        </div>
+
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
                                   <span>2021</span>
@@ -326,28 +348,28 @@ https://www.tooplate.com/view/2115-marvel
                     </div>
                 </div>
 
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" id="service">
                   <h2 class="mb-4 mobile-mt-2">Service</h2>
 
                     <div class="timeline">
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
+                                  <span>2022</span>
+                             </div>
+                             <div class="timeline-info">
+                                  <h3><span>NUGEX</span><small>Comittee Member</small></h3>
+                                  <p>NERSC User Group Executive Committee is the voice of the user community to NERSC and DOE.</p>
+                             </div>
+                        </div>
+
                         <div class="timeline-wrapper">
                              <div class="timeline-yr">
                                   <span>2021</span>
                              </div>
                              <div class="timeline-info">
                                   <h3><span>IO500</span><small>Web Design</small></h3>
-                                  <p>Design and implementation of the new io500.org website.</p>
+                                  <p>Design and implementation of the new io500.org website and submission system.</p>
                              </div>
-                        </div>
-
-                        <div class="timeline-wrapper">
-                            <div class="timeline-yr">
-                                <span>2021</span>
-                            </div>
-                            <div class="timeline-info">
-                                <h3><span>SC21</span><small>Committee Member</small></h3>
-                                <p>Student Volunteers. Virtual Logistics Student Volunteer Liaison. Artifact Description/Article Evaluation (AD/AE) Submissions Committee.</p>
-                            </div>
                         </div>
                         
                         <div class="timeline-wrapper">
