--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css">
@@ -109,6 +110,17 @@ https://www.tooplate.com/view/2115-marvel
                         <div class="custom-btn-group mt-4">
                           <a href="files/jean-luca-bez-cv.pdf" target="_blank" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
                         </div>
+
+                        <ul class="social-links">
+                            <li><a href="https://www.linkedin.com/profile/view?id=AAIAAA23hSMBNLjqg7VAvB4NfMxT8AHVKAd_0_w&trk=nav_responsive_tab_profile" class="uil uil-linkedin" data-toggle="tooltip" data-placement="top" title="LinkedIn"></a></li>
+                            <li><a href="https://scholar.google.com.br/citations?user=2bhFfeoAAAAJ" class="ai ai-google-scholar-square" data-toggle="tooltip" data-placement="top" title="Google Scholar"></a></li>
+                            <li><a href="https://orcid.org/0000-0002-3915-1135" class="ai ai-orcid-square" data-toggle="tooltip" data-placement="top" title="ORCID"></a></li>
+                            <li><a href="https://www.researchgate.net/profile/Jean_Bez" class="ai ai-researchgate-square" data-toggle="tooltip" data-placement="top" title="Research Gate"></a></li>
+                            <li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4315186P6" class="ai ai-lattes-square" data-toggle="tooltip" data-placement="top" title="Lattes (Brazil)"></a></li>
+                            <li><a href="https://hal.science/search/index/q/*/authFullName_s/Jean+Luca+Bez" class="ai ai-hal-square" data-toggle="tooltip" data-placement="top" title="HAL (France)"></a></li>
+                            <li><a href="https://dblp.org/pid/177/2482.html" class="ai ai-dblp-square" data-toggle="tooltip" data-placement="top" title="dblp"></a></li>
+                            <li><a href="https://github.com/jeanbez" class="uil uil-github" data-toggle="tooltip" data-placement="top" title="GitHub"></a></li>
+                        </ul>
                     </div>
                 </div>
 
@@ -134,9 +146,28 @@ https://www.tooplate.com/view/2115-marvel
                       </div>
 
                       <div class="owl-carousel owl-theme">
+                        
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/survey-min.png" class="img-fluid" alt="Access Patterns Survey">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/drishti-min.png" class="img-fluid" alt="Access Patterns Survey">
+                          </div>
+                        </div>
+
                         <div class="item">
                           <div class="project-info">
                             <img src="images/project/dxt-explorer-min.png" class="img-fluid" alt="DXT Explorer">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/pdc-min.png" class="img-fluid" alt="Proactive Data Containers">
                           </div>
                         </div>
 
@@ -148,13 +179,19 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/urionlinejudge-min.png" class="img-fluid" alt="URI Online Judge">
+                            <img src="images/project/io-500-min.png" class="img-fluid" alt="IO500 Website">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/io500-min.png" class="img-fluid" alt="IO500 Website">
+                            <img src="images/project/sighpc-continuum-min.png" class="img-fluid" alt="SIGHPC Computing Continuum">
+                          </div>
+                        </div>
+
+                        <div class="item">
+                          <div class="project-info">
+                            <img src="images/project/adaptative-min.png" class="img-fluid" alt="Adaptative I/O Request Scheduling">
                           </div>
                         </div>
 
@@ -167,12 +204,6 @@ https://www.tooplate.com/view/2115-marvel
                         <div class="item">
                           <div class="project-info">
                             <img src="images/project/forge-min.png" class="img-fluid" alt="FORGE">
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/adaptative-min.png" class="img-fluid" alt="Adaptative I/O Request Scheduling">
                           </div>
                         </div>
 
@@ -310,6 +341,16 @@ https://www.tooplate.com/view/2115-marvel
                                   <span>2023</span>
                              </div>
                              <div class="timeline-info">
+                                  <h3><span>LBNL IPO Inventor of Year</span></h3>
+                                  <p>Awarded the FY22 Inventor of Year alongside Suren Byna by the LBNL Intellectual Property Office.</p>
+                             </div>
+                        </div>
+
+                        <div class="timeline-wrapper">
+                             <div class="timeline-yr">
+                                  <span>2023</span>
+                             </div>
+                             <div class="timeline-info">
                                   <h3><span>BSSw Fellow</span><small>(Honorable Mention)</small></h3>
                                   <p>Awarded by the Better Scientific Software (BSSw) who gives recognition and funding to leaders and advocates of high-quality scientific software.</p>
                              </div>
@@ -401,14 +442,6 @@ https://www.tooplate.com/view/2115-marvel
               <p>
                 You can reach me by email <strong>jlbez</strong> at <strong>lbl.gov</strong>.
               </p>
-
-              <ul class="social-links">
-                <li><a href="https://scholar.google.com.br/citations?user=2bhFfeoAAAAJ" class="uil uil-graduation-cap" data-toggle="tooltip" data-placement="top" title="Google Scholar"></a></li>
-                <li><a href="https://www.researchgate.net/profile/Jean_Bez" class="uil uil-search-alt" data-toggle="tooltip" data-placement="top" title="Research Gate"></a></li>
-                <li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4315186P6" class="uil uil-university" data-toggle="tooltip" data-placement="top" title="Lattes (Brazil)"></a></li>
-                <li><a href="https://www.linkedin.com/profile/view?id=AAIAAA23hSMBNLjqg7VAvB4NfMxT8AHVKAd_0_w&trk=nav_responsive_tab_profile" class="uil uil-linkedin-alt" data-toggle="tooltip" data-placement="top" title="LinkedIn"></a></li>
-                <li><a href="https://github.com/jeanbez" class="uil uil-github-alt" data-toggle="tooltip" data-placement="top" title="GitHub"></a></li>
-              </ul>
             </div>
           </div>
 
@@ -422,7 +455,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">
-                        <p class="copyright-text text-center">&copy; 2021 Jean Luca Bez</p>
+                        <p class="copyright-text text-center">&copy; 2024 Jean Luca Bez</p>
                         <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
                     </div>
                     
