--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ https://www.tooplate.com/view/2115-marvel
                             </div>
                             <div class="timeline-info">
                                 <h3><span>Bachelor</span><small>Computer Science</small></h3>
-                                <p>Bachelor in Computer Science by the Universidade Regional Integrada (UFRGS), Brazil.</p>
+                                <p>Bachelor in Computer Science by the Universidade Regional Integrada (URI), Brazil.</p>
                             </div>
                         </div>
 
@@ -455,7 +455,7 @@ https://www.tooplate.com/view/2115-marvel
                <div class="row">
 
                     <div class="col-lg-12 col-12">
-                        <p class="copyright-text text-center">&copy; 2024 Jean Luca Bez</p>
+                        <p class="copyright-text text-center">&copy; 2025 Jean Luca Bez</p>
                         <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
                     </div>
                     
